CR2023: Prevent scrollbars from being cropped in side panel
This CL adds CSS classes that can be added to .cr-scroller scrollable
containers to add vertical margins to the scrollbars to align them
better with the cards inside them and to prevent them from being
cropped from the side panel View's border-radius.

Before: http://screen/BeZLM2VEhcD8SX2
After: http://screen/6fQsKPkZHwDtavZ

Bug: 1399976, 1430915
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4629878
Commit-Queue: John Lee <johntlee@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1160492}

--- a/chrome/browser/resources/side_panel/shared/sp_shared_style.css
+++ b/chrome/browser/resources/side_panel/shared/sp_shared_style.css
@@ -48,6 +48,16 @@
   border-radius: 100px;
 }
 
+:host-context([chrome-refresh-2023])
+    .sp-scroller-top-of-page::-webkit-scrollbar-track {
+  margin-block-start: var(--sp-body-padding);
+}
+
+:host-context([chrome-refresh-2023])
+    .sp-scroller-bottom-of-page::-webkit-scrollbar-track {
+  margin-block-end: var(--sp-body-padding);
+}
+
 :host-context([chrome-refresh-2023]) .sp-card:has(.sp-scroller) {
   padding-block-end: 0;
 }
